# TaskAnalyzer

./: .env.template  .gitignore  alembic.ini  pyproject.toml
docs/: README-md
jira_analyzer/: db.py  main.py  settings.py
jira_analyzer/clients/: jira.py
jira_analyzer/models/: jira.py
jira_analyzer/repos/: repos.py
jira_analyzer/services/: actions.py
jira_analyzer/shared/: model.py  repos.py
migrations/: env.py
migrations/versions/: 0f209bf1fef1_add_task_status_creation_update_.py  12e0a5a60474_squash_migrations.py  22ba4ab57e63_add_label_entity.py  2c3e0828ee5c_rename_jira_id_add_datasource.py  3691fbc7634f_add_gid_in_user_entity.py  ab965ed3280a_add_transition_entity.py  b18825949ca2_add_task_assignee_model.py  c107093e22bc_rename_transition_entity.py  c27f261f80bc_task_user_project_table_creation.py  cdfc7a14efe7_add_task_entity.py  d796e5f60e30_add_project_table.py  dc4be0cb8fa5_add_task_story_points.py
scripts/: install.sh  run_metabase.sh
task_analyzer/: db.py  identify_send.py  main.py  settings.py
task_analyzer/clients/: google.py  jira.py
task_analyzer/models/: task_analyzer_models.py
task_analyzer/repos/: repos.py
task_analyzer/services/: actions.py
task_analyzer/shared/: model.py  repos.py
tests/: test_jira_analyzer.py
