[tool.poetry]
name = "jira-analyzer"
version = "1.0.0"
description = ""
authors = ["Mihalis Papakonstantinou <mihalispapak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
