[tool.poetry]
name = "jira-analyzer"
version = "1.0.0"
description = ""
authors = ["Mihalis Papakonstantinou <mihalispapak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
SQLAlchemy = "^2.0.25"
shortuuid = "^1.0.11"
alembic = "^1.13.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
httplib2 = "^0.22.0"
unique-names-generator = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
